# plugin_architecture_exercise

./: CMakeLists.txt  README.md
resources/: test_pipeline.yaml
src/: CMakeLists.txt  main_pipeline.cpp
